@@ -843,7 +843,7 @@ But the following one is incorrect:
 
 Initial support for environment variables has been added.
 
-Currently, only `opt.String` and `opt.StringVar` are supported.
+Currently, only `opt.Bool`, `opt.BoolVar`, `opt.String`, and `opt.StringVar` are supported.
 
 To use it, set the option modify function to opt.GetEnv.
 For example:
@@ -863,15 +863,12 @@ profile := opt.String("profile", "default", opt.GetEnv("AWS_PROFILE"))
 
 NOTE: Non supported option types behave with a No-Op when `opt.GetEnv` is defined.
 
+When using `opt.GetEnv` with `opt.Bool` or `opt.BoolVar`, only the words "true" or "false" are valid.
+They can be provided in any casing, for example: "true", "True" or "TRUE".
+
 === Possible Env Variable Roadmap
 
 The Roadmap isn't clear given that there might not be enough value in implementing all option types.
-
-Bool and BoolVar:: Support "true" and "false" case insensitive.
-Any other string should be ignored.
-Defining a non empty string to be true would be ambiguous.
-
-String and StringVar:: Any string is supported.
 
 Int and IntVar:: Any string is supported.
 Normal error when given string can't be converted.
